Fixed bugs: single char swipe, scene height on mobile, active swipe path for single char on desktop.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,6 +32,7 @@ body * {
   justify-content: space-between;
   position: absolute;
   width: 100%;
+  z-index: 5;
 }
 .header-menu__icon-item {
   background-color: #fff;
@@ -63,6 +64,7 @@ body * {
   word-spacing: 99999px;
 
   position: absolute;
+  z-index: 5;
   display: block;
   margin-top: 150px;
   padding: 0px 30px;
@@ -109,7 +111,6 @@ body * {
   left: 0;
   transition-duration: var(--slide-offset-duration);
   transition-property: transform, width, left; 
-  justify-content: center;
 }
 .scene-hero.swiper-slide-prev {
   z-index: 3;
